fix: css fixes for line on actions and icon alignment for traits

--- a/src/stylesheets/partials/_monster.scss
+++ b/src/stylesheets/partials/_monster.scss
@@ -716,8 +716,34 @@
       }
     }
 
-    .monster-saves {
-      // border-top: 1px dotted rgba(#58180d, 0.1);
+    .monster-trait {
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+
+    .monster-action {
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+
+    .monster-reaction {
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+
+    .monster-paragon-action {
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+
+    .monster-legendary-action {
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+
+    .monster-lair-action {
+      margin-top: 0;
+      margin-bottom: 0;
     }
 
     .monster-stats + hr + *:not(.quickstart-helpers) {
@@ -725,13 +751,13 @@
     }
 
     .trait-icon {
-      vertical-align: top;
+      vertical-align: baseline;
     }
 
     .trait-icon::before {
       color: white;
       margin-right: 0.3em;
-      font-size: 0.8em;
+      font-size: 1em;
       display: block;
       min-width: 1.8em;
       min-height: 1em;
@@ -788,16 +814,23 @@
 
     .section-title {
       background: rgba(88, 24, 13, 0.1);
-      border-bottom: 0.15em solid #831517;
       display: grid;
       grid-template-rows: 1fr;
-      grid-template-columns: 0.26fr 1fr;
+      grid-template-columns: 0.22fr 1fr;
       padding-left: 0;
       padding-right: 0;
       width: 97%;
       margin-left: auto;
       margin-right: auto;
-      margin-bottom: 0.3em;
+      margin-top: 0.5em;
+    }
+
+    .border-div {
+      border-bottom: 0.16em solid #831517;
+      width: 97%;
+      margin: auto;
+      margin-top: -0.1em;
+      margin-bottom: 0.5em;
     }
 
     .section-title-actions {
